# The-Loom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  GOALS.md  Makefile  PENDING_GOALS.md  PRD.md  README.md  STRATEGY.md  UI_GOALS.md  docker-compose.yml  pyproject.toml  requirements.txt
.loom/: graph.db  manga.db
agents/: __init__.py  archivist.py  artist.py  director.py  writer.py
core/: __init__.py  auth.py  benchmark_engine.py  collaboration.py  diffusion_backend.py  event_store.py  extraction_storage.py  frontend_workflow_engine.py  graph_logic.py  graph_persistence.py  image_generation_engine.py  image_storage.py  llm_backend.py  manga_storage.py  observability.py  operations_engine.py  orchestration_engine.py  profile_engine.py  profiles.py  qc_analysis.py  rate_limit.py  retrieval_engine.py  story_extraction.py  story_graph_engine.py  text_generation_engine.py  vector_store.py
docs/: CHANGELOG.md  MANGA_IMPORT.md  MANGA_ROADMAP.md  MANGA_UI_BEHAVIOR.md  MANGA_WORKFLOW_COMPLETE.md  MANGA_WORKFLOW_FUTURE_SPRINTS.md  MANGA_WORKFLOW_ISSUES_QUICKREF.md  MANGA_WORKFLOW_SPRINT_PLAN.md  QUICKSTART.md  README.md  SCREENSHOTS_CHECKLIST.md  STORY_EXTRACTION_STRATEGY.md  USER_GUIDE.md  WORKFLOW_DIAGRAMS.md
scripts/: README.md  import_manga_folder.py
tests/: test_artist_engine.py  test_benchmark_phase10.py  test_frontend_phase8.py  test_ingestion_dedup.py  test_ingestion_security.py  test_manga_ingestion_pipeline.py  test_ocr_pipeline.py  test_operations_phase9.py  test_orchestration_engine.py  test_profile_engine.py  (+6 more)
(+128 files in other folders)
